ref: remove auth from book api
